--- a/src/compontents/movieInfo.css
+++ b/src/compontents/movieInfo.css
@@ -7,17 +7,17 @@
     justify-content: flex-start;
   }
   
-  .poster-container {
+  .movieinfo .poster-container {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
   }
   
-  .poster-container img {
+  . .movieinfo .poster-container img {
     margin-right: 20px;
   }
   
-  .movie-details {
+  .movieinfo .movie-details {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -43,7 +43,7 @@
   }
 
  
-  .details-nav {
+  .movieinfo .details-nav {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -57,7 +57,7 @@
 
   }
 
-  .ratebtn{
+  .movieinfo .ratebtn{
     margin: 10px;
     background-color: grey;
   }
